[gd_scene load_steps=20 format=2]

[ext_resource path="res://Scripts/player/player.gd" type="Script" id=1]
[ext_resource path="res://Sprites/blockoutline.png" type="Texture" id=2]
[ext_resource path="res://Scripts/player/rayDown.gd" type="Script" id=3]
[ext_resource path="res://Scripts/player/rayUp.gd" type="Script" id=4]
[ext_resource path="res://Scripts/player/rayLeft.gd" type="Script" id=5]
[ext_resource path="res://Scripts/player/rayRight.gd" type="Script" id=6]
[ext_resource path="res://Sounds/jump.wav" type="AudioStream" id=10]
[ext_resource path="res://Sounds/powerup.wav" type="AudioStream" id=11]
[ext_resource path="res://Sounds/death.wav" type="AudioStream" id=12]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.516129 )
colors = PoolColorArray( 1, 1, 1, 0.352941 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )
width = 32

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 15.3674, 15.642 )

[sub_resource type="Animation" id=4]
resource_name = "timer"
length = 10.0
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 9.5, 10 ),
"transitions": PoolRealArray( 0.5, 1, 2, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 4, 4 ), Vector2( 1, 1 ), Vector2( 1e-05, 1e-05 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 10 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_on_timer_timeout"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:width")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.001, 0.002, 0.2, 9.5, 10 ),
"transitions": PoolRealArray( 0.5, 1, 0.5, 1, 2, 1 ),
"update": 0,
"values": [ 2.0, 1.0, 2.0, 0.5, 2.0, 8.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "timer"
length = 10.0
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 9.5, 10 ),
"transitions": PoolRealArray( 0.5, 1, 2, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 4, 4 ), Vector2( 1, 1 ), Vector2( 1e-05, 1e-05 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 10 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_on_timetimer_timeout"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:width")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 9.5, 10 ),
"transitions": PoolRealArray( 0.5, 1, 2, 1 ),
"update": 0,
"values": [ 2.0, 0.5, 2.0, 8.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "timer"
length = 10.0
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 9.5, 10 ),
"transitions": PoolRealArray( 0.5, 1, 2, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 4, 4 ), Vector2( 1, 1 ), Vector2( 1e-05, 1e-05 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 10 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_on_supertimer_timeout"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:width")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 9.5, 10 ),
"transitions": PoolRealArray( 0.5, 1, 2, 1 ),
"update": 0,
"values": [ 2.0, 0.5, 2.0, 8.0 ]
}

[sub_resource type="Animation" id=7]
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.7 ),
"transitions": PoolRealArray( 1, 2.82843, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.490196, 0.490196, 1 ), Color( 1, 0, 0, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:relativeposition")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.7 ),
"transitions": PoolRealArray( 0.55, 1.8, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -64 ), Vector2( 0, 480 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("deathsound")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 0.594604, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 2, 2 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = false
tracks/5/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 0.637281, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath(".:collision_layer")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 5, 0 ]
}
tracks/7/type = "method"
tracks/7/path = NodePath(".")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}

[sub_resource type="Gradient" id=8]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 0, 0, 1, 1 )

[sub_resource type="GradientTexture" id=9]
gradient = SubResource( 8 )
width = 32

[sub_resource type="Animation" id=10]
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 1 ), Vector2( 40, 960 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="KinematicBody2D" type="KinematicBody2D"]
position = Vector2( 0, -64 )
z_index = 2
collision_layer = 5
collision_mask = 17
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -5.96046e-07 )
scale = Vector2( 1, 32 )
texture = SubResource( 2 )

[node name="outline" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
scale = Vector2( 0.95, 1 )
shape = SubResource( 3 )

[node name="rayDown" type="RayCast2D" parent="."]
visible = false
enabled = true
cast_to = Vector2( 0, 16 )
script = ExtResource( 3 )

[node name="rayUp" type="RayCast2D" parent="."]
visible = false
enabled = true
cast_to = Vector2( 0, -16 )
script = ExtResource( 4 )

[node name="rayLeft" type="RayCast2D" parent="."]
visible = false
enabled = true
cast_to = Vector2( -16, 0 )
script = ExtResource( 5 )

[node name="rayRight" type="RayCast2D" parent="."]
visible = false
enabled = true
cast_to = Vector2( 16, 0 )
script = ExtResource( 6 )

[node name="jumpingtimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.4
one_shot = true

[node name="label" type="Label" parent="."]
margin_left = -35.0
margin_top = -42.0
margin_right = 40.0
margin_bottom = -21.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="jumpbox" type="Line2D" parent="."]
scale = Vector2( 1e-05, 1e-05 )
points = PoolVector2Array( -16, -16, 16, -16, 16, 16, -16, 16, -16, -16 )
width = 2.0
default_color = Color( 0, 1, 0, 1 )
begin_cap_mode = 1
end_cap_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="jumpbox"]
anims/timer = SubResource( 4 )

[node name="timebox" type="Line2D" parent="."]
scale = Vector2( 1e-05, 1e-05 )
points = PoolVector2Array( -16, -16, 16, -16, 16, 16, -16, 16, -16, -16 )
width = 8.0
default_color = Color( 0, 0, 1, 1 )
begin_cap_mode = 1
end_cap_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="timebox"]
anims/timer = SubResource( 5 )

[node name="superbox" type="Line2D" parent="."]
scale = Vector2( 1e-05, 1e-05 )
points = PoolVector2Array( -16, -16, 16, -16, 16, 16, -16, 16, -16, -16 )
width = 2.0
default_color = Color( 1, 0.501961, 0, 1 )
begin_cap_mode = 1
end_cap_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="superbox"]
anims/timer = SubResource( 6 )

[node name="jumpsound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
volume_db = -7.0
bus = "SFX"

[node name="powerupsound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -12.0
bus = "SFX"

[node name="deathsound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )
bus = "SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/deathanimation = SubResource( 7 )

[node name="timeexplosionsprite" type="Sprite" parent="."]
scale = Vector2( 1e-05, 1 )
texture = SubResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="timeexplosionsprite"]
anims/explosionanimation = SubResource( 10 )
